--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Gitチュートリアル</title>
 	</head>
 	<body>
-		<h1>はじめてのバージョン管理</h1>
+		<h1>二回目のバージョン管理</h1>
 		<p>Gitを使ってバージョン管理をする。</p>
 	</body>
 </html>
