--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
-		<title>Gitチュートリアル</title>
+		<title>gitはそんなに難しくない</title>
 	</head>
 	<body>
-		<h1>二回目のバージョン管理</h1>
-		<p>Gitを使ってバージョン管理をする。</p>
+		<h1>東京</h1>
+		<p>福島</p>
 	</body>
 </html>
